<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_userguide"
        android:icon="@drawable/ic_user"
        android:title="@string/title_userguide" />

    <item
        android:id="@+id/navigation_register"
        android:icon="@drawable/ic_register"
        android:title="@string/title_register" />

    <item
        android:id="@+id/navigation_call"
        android:icon="@drawable/ic_call"
        android:title="@string/title_call" />


    <item
        android:id="@+id/logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/title_logout" />

</menu>
